src/styles.css
*{
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

body{
    font-family: 'Inter', sans-serif;
}

i{
    cursor: pointer;
}

a{
    text-decoration: none;
}

/* nav-bar styles */

nav *{
    color: #fff;
}

nav{
    display: flex;
    justify-content: space-between;
    position: fixed;
    width: 100%;
    padding: 1rem;
    background-color: rgb(95, 158, 160);
    box-shadow: 5px 5px rgba(54, 99, 101, 0.5);
}

nav figure{
    margin-right: 0.65rem;
}

nav i{
    font-size: 1.7rem;
}

nav figure .cart-amount{
    position: absolute;
    top: 10%;
    right: 2%;
    padding: 0.1rem;
    border-radius: 20%;
    background: rgb(135, 198, 142);
}

/* End of nav-bar styles. */

/* Style cards */

.cards{
    display: grid;
    grid-template-columns: repeat(4, 223px); /* Repeat four times the cards. */
    justify-content: center;
    gap: 1.5rem;
    padding-top: 5rem;
}

.card figure img{
    border-radius: 0.125rem 0.125rem 0 0;
}

/* End of style cards */

/* media querys for responsive design. */
@media (max-width: 1000px) {
    .cards{
        grid-template-columns: repeat(2, 223px);
    }
}

@media (max-width: 500px) {
    .cards{
        grid-template-columns: repeat(1, 223px);
    }
}

.card{
    border: 2px solid #000;
    border-radius: 5px;
    box-shadow: 9px 9px rgba(235, 5, 255, 0.5);
}

.card .card-details{
    padding: 12px 10px;
}

.card .price{
    display: flex;
    justify-content: space-between;
    margin: 0.4rem;
}

.card .price .buttons{
    display: flex;
    justify-content: end;
    font-size: 1.1rem;
    gap: 0.8rem;
}
/* end of media-querys. */

/* style checkout section when no products were selected. */

.cart-total{
    display: flex;
    flex-direction: column;
    align-items: center;
    padding-top: 5.5rem;
}

.cart-total h2{
    font-size: 2rem;
}

.cart-total .home-btn, .checkout, .remove-all{
    padding: 0.5rem;
    margin: 0.8rem 0;
    border-radius: 0.5rem;
    border: none;
    background: rgb(173 61 255);
    color: #fff;
    text-decoration: none;
    cursor: grab;
}

.checkout{
    background-color: green;
}

.remove-all{
    background-color: red;
}

/* end of checkout section. */

/* style checkout section when products were selected. */

.selected-products{
    display: grid;
    grid-template-columns: repeat(1, 430px);
    justify-content: center;
    gap: 1rem;
}

.cart-items{
    border: 3px solid #000;
    border-radius: 0.31rem;
    display: flex;
    box-shadow: 8px 8px rgb(5 255 43 / 50%);
}

.cart-items .details{
    margin-left: 0.5rem;
}

.cart-items .details h3:last-child{
    margin-top: 2.5rem;
}

.title-price-cross{
    display: flex;
    align-items: center;
    justify-content: space-between;
    width: 17.2rem;
    margin-top: 0.5rem;
}

.title-price{
    display: flex;
    align-items: center;
    gap: 2.5rem;
}

.title-price p:last-child{
    padding: 0.3rem;
    background-color: rgb(255, 145, 145);
    border-radius: 2px;
}

/* end styles rules when products selected */

